# dotfiles

./: .gitignore  .stowrc  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.md  README.md  RESTORE.md  install.sh  mapping.yaml  pyproject.toml  secrets.example
agents/: README.md  rules.md
alacritty/: README.md  alacritty.toml  sync.toml
bash/: .bashrc
bluetooth/: 90-pi-bluetooth.rules  README.md  bluetooth-auto-restore  bluetooth-backup-pairings
browser/: README.md
btop/: README.md
claude/: .gitignore  AGENTS.md  CLAUDE.md  settings.anthropic.json  settings.glm.json  settings.json  settings.sandbox.json  sync.toml
codex/: AGENTS.md  README.md  config.toml  sync.toml
colors/: README.md
copilot/: AGENTS.md  copilot-instructions.md  sync.toml
cron/: README.md
debian/: README.md
docs/: troubleshooting.md
gdrive-backup/: AGENTS.md  config.toml  sync.toml
gh/: AGENTS.md  README.md  config.yml  sync.toml
ghostty/: README.md
git/: .gitconfig.example  .gitleaks.toml  AGENTS.md  README.md  ignore  sync.toml
hermes/: README.md
install/: common.sh  edcloud.sh  mac.sh  pi.sh
iterm2/: AGENTS.md  README.md  profiles.json  sync.toml
keyboard/: 90-leopold-fc660mbt.hwdb  90-leopold-fc900rw.hwdb  README.md
lazygit/: README.md
nano/: README.md  nanorc
nchat/: README.md
neomutt/: AGENTS.md  README.md  neomuttrc  neomuttrc.example  sync.toml
node/: README.md
nvim/: AGENTS.md  README.md  lazy-lock.json  lazyvim.json  sync.toml
openbox/: README.md
openclaw/: setup.sh
opencode/: README.md  sync.toml
pi/: README.md  backup_drive.py  pi-backup  (+3 more)
(+169 files in other folders)
